# cuz.fail

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CLAUDE.md  DATA_INVENTORY.md  MASTER_PLAN_ADDENDUM.md  Makefile  README.md  REPO_AUDIT.md  VERCEL_AUDIT.md  alembic-legacy.ini  alembic.ini  backup.sh  buildout_master.sh  check_all_state.py  check_pending.sql  check_pending_url.sql  docker-compose.yml  followup.sh  index.py  mark_metadata.sql  pyproject.toml  requirements.txt  run_wp4_metadata.py  vercel.json  wp6_loop.sh  wp6_parallel.sh
api/: index.py
data/: instrument_aliases.json  manifest.csv
deploy/: Caddyfile  DEPLOY.md  docker-compose.vps.yml  env.production.example  nginx-cuz.conf  vps_deploy.sh
design-os/: lotfile-agent-ux-prototype.html
docs/: API_CONTRACT.md  ARCHITECTURE.md  ARCHITECTURE_AS_BUILT.md  CHAT_QUALITY_PLAN.md  CODEX_DEPLOY_SYNC_RUNBOOK.md  CONSOLIDATION_PLAN.md  CORPUS_COMPLETENESS_PLAN.md  CORPUS_SCOPE.md  CORPUS_WORKBENCH.md  COUNCIL_ROLLOUT_PLAN.md  DATA_ACQUISITION_RUNBOOK.md  DATA_SOURCES.md  DB_BUILDOUT_AGENT_PLAN.md  DB_BUILDOUT_KIMI_SWARM_PLAN.md  DB_FINISH_PLAN_DUMB_AGENT.md  FRONTEND_API_WIRING.md  FRONTEND_HANDOFF.md  GAP_ANALYSIS.md  GO_LIVE_EXECUTION_PLAN.md  GUEST_FIRST_CLASS_PLAN.md  HERMES_SCRAPE_JOB.md  INFRASTRUCTURE.md  LAUNCH_HANDOFF_PLAN.md  LEGAL_AND_LICENSING_NOTES.md  M1_GOLDEN_FIXTURE.md  MASTER_IMPLEMENTATION_PLAN.md  MASTER_REBUILD_PLAN.md  MULTI_AGENT_BUILD_PLAN.md  OPEN_VOCAB_REBUILD_PLAN.md  PLAN_LOCK_NOTICE.md  PRODUCTION_DEPLOYMENT.md  REBUILD_SPEC.md  ROAD_TO_PROD.md  RULES_EXTRACTION_PIPELINE.md  RULE_REVIEW_WORKLIST.md  RULE_REVIEW_WORKLIST_A4_DESIGN_DEVELOPMENT.md  RULE_REVIEW_WORKLIST_A5_DEVELOPMENT_APPLICATION.md  RULE_REVIEW_WORKLIST_A6_OBJECTIVES.md  RULE_REVIEW_WORKLIST_DEEP_SOIL.md  RULE_REVIEW_WORKLIST_NATURAL_VENTILATION.md  (+11 more)
landing/: index.html
mockups/: 0-home.html  1-onboarding.html  2-dashboard.html  3-evidence.html
reports/: DB_BUILDOUT_RUN_REPORT_2026-06-19.md  DB_BUILDOUT_STATUS_2026-06-21.md  acquisition_report.json  adversarial_closure.json  citation_check_output.txt  citation_closure.json  citation_closure_dry_run.json  citation_gaps.json  conflict_sweep.json  conflict_sweep_dry_run.json  db_state.json  east_fremantle_canary_run.json  embedding_audit.json  eval_seed_load.json  extraction_report.json  fremantle_canary_run.json  gnaf_stage_tables.sql  ingestion_report.json  kwinana_canary_run.json  manifest_closure.json  manifest_repair_summary.md  manifest_url_resolution.json  manifest_url_resolution_1184.json  melville_canary_run.json  melville_rollout_execution.md  non_db_launch_ops_blockers.json  non_db_launch_ops_blockers.local.json  non_db_product_loop_progress.json  partial_candidates.json  rcodes_atom_extraction.md  repair_round_1.md  rule_matrix.csv  source_documents_dump.csv  spatial_load.json  spatial_load_gnaf.json  tier1_rollout_execution.md  verification_results.json  wp0_scope_execution.md  wp4_acquisition.json  (+32 more)
(+1602 files in other folders)
