[project]
name = "draftcheck-wa-core"
version = "0.1.0"
description = "Backend core for a WA residential drafting compliance assistant."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "redis>=5.0.0",
  "rq>=1.16.0",
  "python-multipart>=0.0.9",
  "pypdf>=5.0.0",
  "beautifulsoup4>=4.12.0",
  "pgvector>=0.3.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
  "apps/api",
  "apps/worker",
  "packages/core",
  "packages/ingestion",
  "packages/retrieval",
  "packages/compliance",
  "packages/document_ai",
  "packages/export",
  "packages/scraper",
  "packages/shared_schemas"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "apps/api",
  "apps/worker",
  "packages/core",
  "packages/ingestion",
  "packages/retrieval",
  "packages/compliance",
  "packages/document_ai",
  "packages/export",
  "packages/scraper",
  "packages/shared_schemas"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
