[project]
name = "draftcheck-wa-core"
version = "0.1.0"
description = "Backend core for a WA residential drafting compliance assistant."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "python-multipart>=0.0.9",
  "pypdf>=5.0.0",
  "pymupdf>=1.24.0",
  "pillow>=10.0.0",
  "pytesseract>=0.3.13",
  "beautifulsoup4>=4.12.0",
  "pgvector>=0.3.0",
  "python-docx>=1.1.0",
  "procrastinate>=3.8.1",
  "sentry-sdk[fastapi]>=2.0.0",
  "ezdxf>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "import-linter>=2.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".claire", ".claude"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.importlinter]
root_package = "draftcheck"

[[tool.importlinter.contracts]]
name = "Checks layer must not depend on AI workers"
type = "forbidden"
source_modules = ["draftcheck.checks"]
forbidden_modules = ["draftcheck.ai"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
